internal/xds/translator/testdata/out/xds-ir/ratelimit-per-rule-headers.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - gateway.envoyproxy.io
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-1/http/gateway_envoyproxy_io
    routes:
    - match:
        prefix: /
      metadata:
        filterMetadata:
          envoy-gateway:
            policies:
            - kind: BackendTrafficPolicy
              name: policy-for-route
              namespace: default
            resources:
            - kind: HTTPRoute
              name: httproute-1
              namespace: default
      name: httproute/default/httproute-1/rule/0/match/0/gateway_envoyproxy_io
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
          domain: envoy-gateway/gateway-1/http
          rateLimits:
          - actions:
            - genericKey:
                descriptorKey: httproute/default/httproute-1/rule/0/match/0/gateway_envoyproxy_io
                descriptorValue: httproute/default/httproute-1/rule/0/match/0/gateway_envoyproxy_io
            - headerValueMatch:
                descriptorKey: rule-0-match-0
                descriptorValue: rule-0-match-0
                expectMatch: true
                headers:
                - name: x-user-id
                  stringMatch:
                    exact: one
            xRatelimitOption: "OFF"
          - actions:
            - genericKey:
                descriptorKey: httproute/default/httproute-1/rule/0/match/0/gateway_envoyproxy_io
                descriptorValue: httproute/default/httproute-1/rule/0/match/0/gateway_envoyproxy_io
            - headerValueMatch:
                descriptorKey: rule-1-match-0
                descriptorValue: rule-1-match-0
                expectMatch: true
                headers:
                - name: x-user-id
                  stringMatch:
                    exact: two
            xRatelimitOption: DRAFT_VERSION_03
          - actions:
            - genericKey:
                descriptorKey: httproute/default/httproute-1/rule/0/match/0/gateway_envoyproxy_io
                descriptorValue: httproute/default/httproute-1/rule/0/match/0/gateway_envoyproxy_io
            - headerValueMatch:
                descriptorKey: rule-2-match-0
                descriptorValue: rule-2-match-0
                expectMatch: true
                headers:
                - name: x-user-id
                  stringMatch:
                    exact: three
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http-8080
  virtualHosts:
  - domains:
    - gateway.envoyproxy.io
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http-8080
    name: envoy-gateway/gateway-1/http-8080/gateway_envoyproxy_io
    routes:
    - match:
        prefix: /
      metadata:
        filterMetadata:
          envoy-gateway:
            policies:
            - kind: BackendTrafficPolicy
              name: policy-for-route-2
              namespace: default
            resources:
            - kind: HTTPRoute
              name: httproute-2
              namespace: default
      name: httproute/default/httproute-2/rule/0/match/0/gateway_envoyproxy_io
      route:
        cluster: httproute/default/httproute-2/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.local_ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
          alwaysConsumeDefaultTokenBucket: false
          descriptors:
          - entries:
            - key: rule-0-match-0
              value: rule-0-match-0
            tokenBucket:
              fillInterval: 3600s
              maxTokens: 10
              tokensPerFill: 10
          - entries:
            - key: rule-1-match-0
              value: rule-1-match-0
            tokenBucket:
              fillInterval: 3600s
              maxTokens: 20
              tokensPerFill: 20
          - entries:
            - key: rule-2-match-0
              value: rule-2-match-0
            tokenBucket:
              fillInterval: 3600s
              maxTokens: 30
              tokensPerFill: 30
          enableRetryAfterHeader: true
          enableXRatelimitHeaders: DRAFT_VERSION_03
          filterEnabled:
            defaultValue:
              numerator: 100
          filterEnforced:
            defaultValue:
              numerator: 100
          maxDynamicDescriptors: 10000
          rateLimits:
          - actions:
            - headerValueMatch:
                descriptorKey: rule-0-match-0
                descriptorValue: rule-0-match-0
                expectMatch: true
                headers:
                - name: x-user-id
                  stringMatch:
                    exact: one
            xRatelimitOption: "OFF"
          - actions:
            - headerValueMatch:
                descriptorKey: rule-1-match-0
                descriptorValue: rule-1-match-0
                expectMatch: true
                headers:
                - name: x-user-id
                  stringMatch:
                    exact: two
            xRatelimitOption: DRAFT_VERSION_03
          - actions:
            - headerValueMatch:
                descriptorKey: rule-2-match-0
                descriptorValue: rule-2-match-0
                expectMatch: true
                headers:
                - name: x-user-id
                  stringMatch:
                    exact: three
          statPrefix: http_local_rate_limiter
          tokenBucket:
            fillInterval: 1s
            maxTokens: 4294967295
            tokensPerFill: 4294967295
